--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="no_data">لا يوجد طلبات</string>
     <string name="search">بحث</string>
     <string name="sign_out">تسجيل خروج</string>
+    <string name="hint_phone">5xxxxxxxx</string>
 
     <string-array name="gender">
         <item> ذكر </item>
