--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="sign_up">تسجيل حساب</string>
     <string name="slogan_tv">نرتقي بمساعدة الاخرين . . .</string>
     <string name="ssn">رقم الهوية</string>
-    <string name="age">العمر</string>
+    <string name="date_of_birth">تاريخ الميلاد</string>
     <string name="firefighter">دفاع مدني</string>
     <string name="blood_type">فصيلة الدم</string>
     <string name="phone_close_person">رقم شخص مقرب</string>
